--- a/tmp_next_release_02_03_15.html
+++ b/tmp_next_release_02_03_15.html
@@ -6,8 +6,12 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="title" content="TEDxUniversityofDundee web page">
+    <meta name="description" content="TEDxUniversityofDundee web page">
+    <meta name="keywords" content="TEDx, University of Dundee, Dundee, Science,
+    event, scotland" />
+    <meta name="author" content="Fabio Marques-Madeira, Thiago Britto-Borges">
+
 
     <title>TEDx University of Dundee - Make a difference</title>
 
@@ -16,6 +20,10 @@
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
+
+    <!-- Gridder CSS -->
+    <link href="css/gridder.css" rel="stylesheet">
+
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -213,67 +221,82 @@
     </section>
 
     <!-- About Team -->
-    <section id="team" class="container content-section text-center">
+    <section id="team" class="container-fluid content-section">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Organizing Team</h2>
-
-        <div class="row">
-            <img src="img/dianbo.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Dianbo Liu</ins> is the licence holder for the
-                    upcoming TEDxUniversityofDundee event. He is the leader
-                    of the team and is currently studying for a PhD within the
-                    Computational and Physical Biology department at the
-                    University of Dundee. He is interested in making links
-                    among seemingly unrelated fields, and therefore come up
-                    with innovative and useful inventions.</p>
+                <h2 class="text-center">Organizing Team</h2>
+                </div>
+            </div>
+           <div class="gridder">
+        <div class="gridder-list first">
+            <div class="gridder-thumb">
+                <img src="img/dianbo.png"
+                     class='img-responsive img-circle'/>
+                <span class="overlay">Dianbo Liu</span>
+            </div>
+            <div class="gridder-content">
+                <p>
+                   Dianbo is the
+            licence holder for the upcoming TEDxUniversityofDundee event.
+            He is the leader of the team and is currently studying for a
+            PhD within the Computational and Physical Biology department at
+            the University of Dundee. He is interested in making links
+            among seemingly unrelated fields, and therefore come up with
+            innovative and useful inventions.
+                </p>
             </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/gillian.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Gillian Dunphy</ins> was born and raised in Glasgow but was
-                    compelled to make the lengthy journey to Dundee after being
-                    lured by its East Coast charm. She is currently studying for
-                    a PhD in Immunology at the University of Dundee. She is
-                    currently managing a team of student volunteers in the areas
-                    of Graphic Design and Stage Design. She is also involved in
-                    marketing and speaker recruitment.</p>
+        <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/gillian.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Gillian Dunphy</span>
             </div>
-            <div class="col-md-3"></div>
+            <div class="gridder-content">
+                <p>Gillian was born
+            and raised in Glasgow was compelled to make the lengthy
+            journey to Dundee after being lured by its East Coast charm.
+            She is currently studying for a PhD in Immunology at the
+            University of Dundee. She is currently managing a team of student
+            volunteers in the areas of Graphic Design and Stage Design.
+            She is also involved in marketing and speaker recruitment.</p>
+            </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/stefan.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Stefan Tomov</ins> is a recent University of Dundee
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/stefan.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Stefan Tomov</span>
+            </div>
+            <div class="gridder-content">
+                <p>Stefan is a recent University of Dundee
                     graduate in the field of Economics and Politics. He comes
                     from Bulgaria and is currently the Deputy President of
                     Dundee University Students' Association (DUSA). Stefan is
                     responsible for securing the logistics required to make
-                    TEDxUniversityofDundee a resounding success. </p>
+                    TEDxUniversityofDundee a resounding success.</p>
             </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/thiago.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Thiago Britto-Borges</ins> is a Brazilian PhD student within the Computational Biology department of the University of Dundee
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/thiago.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Thiago Britto-Borges</span>
+            </div>
+            <div class="gridder-content">
+                <p> Thiago is a Brazilian PhD student within the Computational Biology department of the University of Dundee
                     He has an inexhaustible passion for learning and enjoys spreading knowledge. Thiago
-                    is responsible for developing and designing the TEDxUniversityofDundee website. </p>
+                    is responsible for developing and designing the TEDxUniversityofDundee website.</p>
             </div>
-            <div class="col-md-3"></div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/sarah.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Sarah-Lena Offenburger</ins> is pursuing a PhD in
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/sarah.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Sarah-Lena Offenburger</span>
+            </div>
+            <div class="gridder-content">
+                <p> Sarah is pursuing a PhD in
                     Neurobiology at the University of Dundee. When Sarah is not
                     in the lab, you will probably find her doing sports, taking
                     pictures or just having a coffee with friends. Sarah is a
@@ -281,23 +304,27 @@
                     and liasing with the speakers of the event.</p>
             </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/fabio.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p>Originally from Portugal, <ins>F&aacute;bio Madeira</ins> is
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/fabio.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">F&aacute;bio Madeira</span>
+            </div>
+            <div class="gridder-content">
+                <p>Originally from Portugal, <ins>F&aacute;bio</ins> is
                     currently studying for a PhD within the Cell and Molecular
                     Biology department at the  University of Dundee,
                     specialising in Computational Biology. Alongside with Thiago, he helps managing and developing the website of the event.</p>
             </div>
-            <div class="col-md-3"></div>
         </div>
-         </br>
-        <div class="row">
-            <img src="img/darya.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Darya Baranovka</ins> is the president of  Enterprise
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/darya.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Darya Baranovka</span>
+            </div>
+            <div class="gridder-content">
+                <p>Darya is the president of  Enterprise
                     Gym which is a University of Dundee department where
                     students learn about entrepreneurship. She comes from the
                     small and pretty town of Liepaya, which is located on the
@@ -306,48 +333,56 @@
                     of the event.</p>
             </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/kushal.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Kushal Rugjee</ins> moved from the island of
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/kushal.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Kushal Rugjee</span>
+            </div>
+            <div class="gridder-content">
+               <p> Kushal moved from the island of
                     Mauritius to equally sunny Dundee to pursue a PhD in
                     Microbiology. His role in the team is to co-ordinate the
                     overall organisation of the TEDx event and to ensure that
-                    progress is being made.
-                    </p>
+                    progress is being made.</p>
             </div>
-            <div class="col-md-3"></div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/sam.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Sam Watkins</ins> is currently studying Computer Science at the University of Dundee.
+                <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/sam.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Sam Watkins</span>
+            </div>
+            <div class="gridder-content">
+                <p>
+               Sam is currently studying Computer Science at the University of Dundee.
                     He is in his third year now and interested in Web
                     Programming, Product Development and Entrepreneurship. Sam
                     is our Social Media Officer, taking care of our Twitter and
                     Facebook accounts.</p>
             </div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/dora.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Teodora Maghear</ins> is the Enterprise Assistant & Coordinator at the Enterprise Gym, University of Dundee.
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/dora.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Teodora Maghear</span>
+            </div>
+            <div class="gridder-content">
+               <p>Teodora is the Enterprise Assistant & Coordinator at the Enterprise Gym, University of Dundee.
                     Her perseverance and passion for entrepreneurship and innovation has seen her work her way up in the roles in the department.
                     She received her BSc in business Economics with marketing from Dundee University in 2014. Dora is actively contributing her
-                    expertise in a number of areas of the project.​</p>
+                    expertise in a number of areas of the project.</p>
             </div>
-            <div class="col-md-3"></div>
         </div>
-        </br>
-        <div class="row">
-            <img src="img/alasdair.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Alasdair McGill</ins> is Head of Enterprise &
+            <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/alasdair.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Alasdair McGill</span>
+            </div>
+            <div class="gridder-content">
+               <p> Alasdair is Head of Enterprise &
                     Entrepreneurial Strategy at the University of Dundee.
                     Not a man to sit about, Alasdair has a brain that's always
                     busy and he loves thinking of creative ways to make a
@@ -356,21 +391,23 @@
                     industries as diverse as retail, software, sports and
                     financial services. He is a formidable adviser within our team.</p>
             </div>
-
         </div>
-        </br>
-        <div class="row">
-            <img src="img/yuri.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Yuri  Alexandrov</ins> is currently pursuing a master’s
+               <div class="gridder-list">
+            <div class="gridder-thumb">
+                <img src="img/yuri.png"
+                        class='img-responsive img-circle'/>
+                <span class="overlay">Yuri Alexandrov</span>
+            </div>
+            <div class="gridder-content">
+               <p>Yuri is currently pursuing a master’s
                     degree in Data Engineering. He studies Data because he likes
                     to observe and find patterns in the environment that
                     surrounds us. Yuri serves as a curator along with Sarah in
                     our team. He is involved in the recruitment of speakers.</p>
-            </div>
-            <div class="col-md-3"></div>
         </div>
-            </div>
+                   </div>
+
+
         </div>
     </section>
 
@@ -400,13 +437,10 @@
     </section>
     
     <!-- Sponsors section -->
-    <section id="sponsors" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Partners</h2>
-            </div>
-        </div>
-        <div class="container">
+       <section id="sponsors" class="container content-section text-center">
+        <h2>Partners</h2>
+
+        <div class="container-fluid">
             <div class="row">
                   <div class="col-md-4">
                       <a href="http://www.dundee.ac.uk/" target='_blank'>
@@ -542,6 +576,30 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
+    <script src="js/gridder.js"></script>
+    <script>
+        jQuery(function($) {
+            // Call Gridder
+            $('.gridder').gridderExpander({
+                scrollOffset: 30,
+                scrollTo: 'panel', // 'panel' or 'listitem'
+                animationSpeed: 400,
+                animationEasing: "easeInOutExpo",
+                onStart: function(){
+                    console.log('Gridder Inititialized');
+                },
+                onExpanded: function(){
+                    console.log('Gridder Expanded');
+                },
+                onChanged: function(){
+                    console.log('Gridder Changed');
+                },
+                onClosed: function(){
+                    console.log('Gridder Closed');
+                }
+            });
+        });
+    </script>
 
 </body>
 
