--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 
     <!-- Custom CSS -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/gridder.min.css" rel="stylesheet">
+    <link href="css/jquery.gridder.min.css" rel="stylesheet">
+
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -298,27 +301,6 @@
      </div>
     </section>
 
-    <section id="speakers2" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>Self-nominated Speakers</h2>
-                   <p>Nominations are open to everyone. If you have a story that you want to share and if the
-                       following applies to you, then we are interested in hearing from you:
-                        <ul style="font-size: 18px"><em>Are you enthusiastic about your ideas?</em></ul>
-                        <ul style="font-size: 18px"><em>Do you enjoy speaking?</em></ul>
-                        <ul style="font-size: 18px"><em>Do you have something interesting to share?</em></ul>
-                       <ul style="font-size: 18px"><em>Can you</em> <em style="color: #DA291C;">make a difference?</em></ul>
-                   </br>
-                 <p>Successful applicants will have the opportunity to be part of the ever-increasing family of TEDx speakers.
-                     All talks will be recorded and shared on the official TEDx YouTube channel. This is a great
-                     networking opportunity and a chance to have your ideas shared around the world.</p>
-
-                <p>To apply for a TEDx talk email us at <a href="mailto:tedx@dundee.ac.uk">tedx@dundee.ac.uk</a> for details of how to self-nominate.
-                Before applying please check the <a href="http://storage.ted.com/tedx/manuals/tedx_speaker_guide.pdf" target='_blank'>TEDx Speaker Guide</a>
-                for additional inspiration. Self-nominations from speakers accepted until the 30th of March.</p>
-            </div>
-        </div>
-    </section>
 
     <!-- About Team -->
     <section id="team" class="container content-section text-center">
@@ -327,159 +309,151 @@
                 <h2>Organizing Team</h2>
 
         <div class="row">
-            <img src="img/dianbo.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Dianbo Liu</ins> is the licence holder for the
-                    upcoming TEDxUniversityofDundee event. He is the leader
+            <ul class="gridder">
+<li class="gridder-list" data-griddercontent="#dianbo">
+        <div class="gridder-thumb">
+            <img src="img/dianbo.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Dianbo Liu</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#gillian">
+        <div class="gridder-thumb">
+            <img src="img/gillian.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Gillian Dunphy</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#stefan">
+        <div class="gridder-thumb">
+            <img src="img/stefan.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Stefan Tomov</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#thiago">
+        <div class="gridder-thumb">
+            <img src="img/thiago.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Thiago Britto-Borges</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#sarah">
+        <div class="gridder-thumb">
+            <img src="img/sarah.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Sarah-Lena Offenburger</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#fabio">
+        <div class="gridder-thumb">
+            <img src="img/fabio.png" class="img-circle img-responsive"/>
+            <span class="title text-center">F&aacute;bio Madeira</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#darya">
+        <div class="gridder-thumb">
+            <img src="img/darya.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Darya Baranovka</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#kushal">
+        <div class="gridder-thumb">
+            <img src="img/kushal.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Kushal Rugjee</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#sam">
+        <div class="gridder-thumb">
+            <img src="img/sam.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Sam Watkins</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#dora">
+        <div class="gridder-thumb">
+            <img src="img/dora.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Teodora Maghear</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#alasdair">
+        <div class="gridder-thumb">
+            <img src="img/alasdair.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Alasdair McGill</span>
+            </div>
+         </li>
+<li class="gridder-list" data-griddercontent="#yuri">
+        <div class="gridder-thumb">
+            <img src="img/yuri.png" class="img-circle img-responsive"/>
+            <span class="title text-center">Yuri Alexandrov</span>
+            </div>
+         </li>
+</ul>
+<div id="dianbo" class="gridder-content">Dianbo Liu is the licence holder for the
+upcoming TEDxUniversityofDundee event. He is the leader
                     of the team and is currently studying for a PhD within the
                     Computational and Physical Biology department at the
                     University of Dundee. He is interested in making links
                     among seemingly unrelated fields, and therefore come up
-                    with innovative and useful inventions.</p>
-            </div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/gillian.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Gillian Dunphy</ins> was born and raised in Glasgow but was
+                    with innovative and useful inventions.</div>
+<div id="gillian" class="gridder-content">Gillian Dunphy was born and raised in Glasgow but was
                     compelled to make the lengthy journey to Dundee after being
                     lured by its East Coast charm. She is currently studying for
                     a PhD in Immunology at the University of Dundee. She is
                     currently managing a team of student volunteers in the areas
                     of Graphic Design and Stage Design. She is also involved in
-                    marketing and speaker recruitment.</p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/stefan.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Stefan Tomov</ins> is a recent University of Dundee
+                    marketing and speaker recruitment.</div>
+<div id="stefan" class="gridder-content">Stefan Tomov is a recent University of Dundee
                     graduate in the field of Economics and Politics. He comes
                     from Bulgaria and is currently the Deputy President of
                     Dundee University Students' Association (DUSA). Stefan is
                     responsible for securing the logistics required to make
-                    TEDxUniversityofDundee a resounding success. </p>
-            </div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/thiago.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Thiago Britto-Borges</ins> is a Brazilian PhD student within the Computational Biology department of the University of Dundee
+                    TEDxUniversityofDundee a resounding success.</div>
+<div id="thiago" class="gridder-content">Thiago Britto-Borges is a Brazilian PhD student within
+               the Computational Biology department of the University of Dundee.
                     He has an inexhaustible passion for learning and enjoys spreading knowledge. Thiago
-                    is responsible for developing and designing the TEDxUniversityofDundee website. </p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/sarah.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Sarah-Lena Offenburger</ins> is pursuing a PhD in
+                    is responsible for developing and designing the TEDxUniversityofDundee website.</div>
+<div id="sarah" class="gridder-content">Sarah-Lena Offenburger is pursuing a PhD in
                     Neurobiology at the University of Dundee. When Sarah is not
                     in the lab, you will probably find her doing sports, taking
                     pictures or just having a coffee with friends. Sarah is a
                     curator within our team and is responsible for recruiting
-                    and liasing with the speakers of the event.</p>
-            </div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/fabio.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p>Originally from Portugal, <ins>F&aacute;bio Madeira</ins> is
+                    and liasing with the speakers of the event.</div>
+<div id="fabio" class="gridder-content">Originally from Portugal, F&aacute;bio Madeira is
                     currently studying for a PhD within the Cell and Molecular
                     Biology department at the  University of Dundee,
-                    specialising in Computational Biology. Alongside with Thiago, he helps managing and developing the website of the event.</p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-         </br>
-        <div class="row">
-            <img src="img/darya.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Darya Baranovka</ins> is the president of  Enterprise
+                    specialising in Computational Biology. Alongside with Thiago, he helps managing and developing the website of the event.</div>
+<div id="darya" class="gridder-content">Darya Baranovka is the president of  Enterprise
                     Gym which is a University of Dundee department where
                     students learn about entrepreneurship. She comes from the
                     small and pretty town of Liepaya, which is located on the
                     Latvian coast of the Baltic Sea. Darya is responsible for
                     the recruitment of volunteers and organising the logistics
-                    of the event.</p>
-            </div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/kushal.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Kushal Rugjee</ins> moved from the island of
+                    of the event.</div>
+<div id="kushal" class="gridder-content">Kushal Rugjee moved from the island of
                     Mauritius to equally sunny Dundee to pursue a PhD in
                     Microbiology. His role in the team is to co-ordinate the
                     overall organisation of the TEDx event and to ensure that
-                    progress is being made.
-                    </p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/sam.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Sam Watkins</ins> is currently studying Computer Science at the University of Dundee.
+                    progress is being made.</div>
+<div id="sam" class="gridder-content">Sam Watkins is currently studying Computer Science at the University of Dundee.
                     He is in his third year now and interested in Web
                     Programming, Product Development and Entrepreneurship. Sam
                     is our Social Media Officer, taking care of our Twitter and
-                    Facebook accounts.</p>
-            </div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/dora.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Teodora Maghear</ins> is the Enterprise Assistant & Coordinator at the Enterprise Gym, University of Dundee.
-                    Her perseverance and passion for entrepreneurship and innovation has seen her work her way up in the roles in the department.
-                    She received her BSc in business Economics with marketing from Dundee University in 2014. Dora is actively contributing her
-                    expertise in a number of areas of the project.​</p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/alasdair.png" alt="Image" class='img-responsive pull-left navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-3"></div>
-            <div class="col-md-9">
-                <p><ins>Alasdair McGill</ins> is Head of Enterprise &
+                    Facebook accounts.</div>
+<div id="dora" class="gridder-content">Teodora Maghear is the Enterprise Assistant & Coordinator
+               at the Enterprise Gym, University of Dundee.
+               Her perseverance and passion for entrepreneurship and innovation has seen her work her way up in the roles in the department.
+               She received her BSc in business Economics with marketing from Dundee University in 2014. Dora is actively contributing her
+               expertise in a number of areas of the project.</div>
+<div id="alasdair" class="gridder-content">Alasdair McGill is Head of Enterprise &
                     Entrepreneurial Strategy at the University of Dundee.
                     Not a man to sit about, Alasdair has a brain that's always
                     busy and he loves thinking of creative ways to make a
                     difference. As well as his role at the university, Alasdair
                     is also a director and founder of several companies in
                     industries as diverse as retail, software, sports and
-                    financial services. He is a formidable adviser within our team.</p>
-            </div>
-
-        </div>
-        </br>
-        <div class="row">
-            <img src="img/yuri.png" alt="Image" class='img-responsive pull-right navbar-vertical-align img-circle' style="max-width:100%;height:auto;">
-            <div class="col-md-9">
-                <p><ins>Yuri  Alexandrov</ins> is currently pursuing a master’s
+                    financial services. He is a formidable adviser within our
+                    team.</div>
+<div id="yuri" class="gridder-content">Yuri Alexandrov is currently pursuing a master's
                     degree in Data Engineering. He studies Data because he likes
                     to observe and find patterns in the environment that
                     surrounds us. Yuri serves as a curator along with Sarah in
-                    our team. He is involved in the recruitment of speakers.</p>
-            </div>
-            <div class="col-md-3"></div>
-        </div>
-            </div>
-        </div>
+                    our team. He is involved in the recruitment of speakers.</div>
+
     </section>
 
     <!-- Map Section -->
@@ -645,13 +619,36 @@
 
         marker.setMap(map);
         }
-
         google.maps.event.addDomListener(window, 'load', initialize);
-
     </script>
+        <script src="js/jquery.gridder.min.js"></script>
+    <script>
+    $(function() {
+
+        // Call Gridder
+        $('.gridder').gridderExpander({
+            scroll: true,
+            scrollOffset: 30,
+            scrollTo: "panel", // panel or listitem
+            animationSpeed: 400,
+            animationEasing: "easeInOutExpo",
+            onStart: function(){
+                console.log("Gridder Inititialized");
+            },
+            onContent: function(){
+                console.log("Gridder Content Loaded");
+            },
+            onClosed: function(){
+                console.log("Gridder Closed");
+            }
+        });
+    });
+    </script>
+
 
     <!-- Custom Theme JavaScript -->
     <script src="js/custom.js"></script>
+
 
 </body>
 
